# home-assistant-tapo-p100

./: .cookiecutter.json  .editorconfig  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc.yml  .releaserc.json  CONTRIBUTING.md  LICENSE  README.md  bump-version.sh  hacs.json  info.md  pyproject.toml  release.config.js  requirements_dev.txt  requirements_test.txt  setup.cfg
.codex/: config.toml
.devcontainer/: .bashrc  Dockerfile  configuration.yaml  devcontainer-extensions.json  devcontainer.json  motd  post-attach.sh  setup-git.sh  setup-shell.sh  start.sh
.github/: FUNDING.yml  dependabot.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: feature_request.md  issue.md
.github/workflows/: constraints.txt  labeler.yml  lint.yml  pr.yml  release-drafter.yml  release.yml  sponsors.yaml  stale.yml  tests.yaml  tests.yml  validate.yml  validation.yml
config/: configuration.yaml
custom_components/: __init__.py  migrations.py
custom_components/tapo/: __init__.py  binary_sensor.py  climate.py  common_setup.py  config_flow.py  const.py  coordinators.py  diagnostics.py  discovery.py  entity.py  errors.py  event.py  hass_tapo.py  helpers.py  light.py  manifest.json  migrations.py  number.py  options_flow_handler.py  sensor.py  setup_helpers.py  siren.py  strings.json  switch.py  tapo_device.py  tapo_entity.py  tapo_sensor_entity.py  update.py  utils.py
custom_components/tapo/blueprints/automation/: tapo_s200_button_toggle.yaml  tapo_s200d_dial_brightness.yaml
custom_components/tapo/components/: child_energy_component.py
custom_components/tapo/hub/: binary_sensor.py  climate.py  event.py  hass_tapo_hub.py  number.py  sensor.py  siren.py  switch.py  tapo_hub.py  tapo_hub_child_coordinator.py  tapo_hub_coordinator.py
custom_components/tapo/sensors/: __init__.py  sensor_config.py  tapo_sensor_source.py
custom_components/tapo/translations/: ar.json  de.json  en.json  fr.json  it.json  pt-BR.json
custom_components/tapo_back/: __init__.py  api.py  binary_sensor.py  config_flow.py  const.py  entity.py  manifest.json  sensor.py  switch.py
custom_components/tapo_back/translations/: en.json  fr.json  nb.json
script/: check  clean  codex  develop  hassfest  help  lint  lint-check  spell  spell-check  sync_version.py  test  type-check
script/.lib/: output.sh
script/setup/: bootstrap  reset  setup  sync-hacs
tapo/: __init__.py  config_flow.py  export.json  tapo_helper.py
tests/: __init__.py  conftest.py  const.py  tapo_mock_helper.py  test_api.py  test_binary_sensor.py  test_config_flow.py  test_find_localdevice.py  test_hub.py  test_init.py  test_light.py  test_sensor.py  test_siren.py  test_switch.py
tests/fixtures/: bulb.json  discovery.json  hub.json  hub_children_list.json  hub_children_state.json  hub_device_state.json  ledstrip.json  plug_device_state.json  plug_emeter.json  plug_p105.json  plug_strip.json
tests/unit/: test_const.py  test_event.py
tests/unit/hub/: conftest.py  test_binary_sensor.py  test_climate.py  test_event.py  test_number.py  test_sensor.py  test_switch.py  test_tapo_hub.py  test_tapo_hub_child_coordinator.py
