[project]
name = "home-assistant-tapo-p100"
version = "3.2.2"
description = "Home Assistant custom integration for TP-Link Tapo devices"
readme = "README.md"
requires-python = ">=3.14.2"
dependencies = []  # Runtime deps are managed by Home Assistant manifest requirements.

[tool.setuptools]
packages = ["custom_components.tapo"]

[dependency-groups]
dev = [
    { include-group = "test" },
    "homeassistant==2026.3.0",
    "plugp100==6.0.0.dev2",
    "aiodiscover==1.6.0",
    "pre-commit==3.3.3",
    "ruff==0.9.0",
]
test = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-homeassistant-custom-component",
    "pytest-timeout",
    "async-timeout",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E203", "E501", "W503", "W504"]

[tool.ruff.lint.isort]
force-sort-within-sections = true
known-first-party = ["custom_components.tapo", "tests"]
combine-as-imports = true
split-on-trailing-comma = false

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = [".git"]
addopts = "--strict-markers --cov=custom_components.tapo"
console_output_style = "count"
asyncio_mode = "auto"

[tool.coverage.run]
branch = false

[tool.coverage.report]
show_missing = true
fail_under = 100
